--- a/market/src/main/resources/templates/register.html
+++ b/market/src/main/resources/templates/register.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row p-2">
         <div class="col">
-            <form th:action="@{/register}" method="post" enctype="multipart/form-data">
+            <form th:action="@{/register}" method="post">
                 <div class="mb-3">
                     <label for="username" class="form-label">Имя пользователя</label>
                     <input type="text" class="form-control" id="username" name="username">
