--- a/market/src/main/resources/templates/error.html
+++ b/market/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
     <meta charset="utf-8">
@@ -16,9 +16,19 @@
                 <h2>
                     <span class="badge text-bg-danger">Ошибка</span>
                 </h2>
-                <a href="/orders" class="btn btn-secondary ms-auto bi bi-file-earmark-text"> Заказы</a>
-                <a href="/cart/items" class="btn btn-secondary bi bi-cart4"> Корзина</a>
+                <a sec:authorize="isAuthenticated()" href="/orders" class="btn btn-secondary ms-auto bi bi-file-earmark-text"> Заказы</a>
+                <a sec:authorize="isAuthenticated()" href="/cart/items" class="btn btn-secondary bi bi-cart4"> Корзина</a>
                 <a href="/items" class="btn btn-secondary bi bi-arrow-left-square"> Главная</a>
+                <a sec:authorize="isAuthenticated()"
+                   href="/logout"
+                   class="btn btn btn-outline-danger bi bi-box-arrow-left"
+                   data-bs-toggle="tooltip"
+                   data-bs-placement="top"
+                   title="Выход из системы"
+                   th:text="' ' + ${#authentication.name}">
+                    Имя пользователя
+                </a>
+                <a th:if="${#authentication == null || !#authentication.isAuthenticated()}" href="/login" class="btn btn-outline-success bi bi-box-arrow-in-right ms-auto"> Войти</a>
             </div>
         </div>
     </div>
