--- a/market/src/main/resources/templates/login.html
+++ b/market/src/main/resources/templates/login.html
@@ -16,6 +16,7 @@
                 <h2>
                     <span class="badge text-bg-success">Авторизация пользователя</span>
                 </h2>
+                <a href="/register" class="btn btn-success bi bi-person-plus ms-auto"> Новый аккаунт</a>
                 <a href="/items" class="btn btn-secondary bi bi-arrow-left-square ms-auto"> Главная</a>
             </div>
         </div>
