--- a/market/src/main/resources/templates/register.html
+++ b/market/src/main/resources/templates/register.html
@@ -16,6 +16,7 @@
                 <h2>
                     <span class="badge text-bg-success">Регистрация пользователя</span>
                 </h2>
+                <a href="/login" class="btn btn-outline-success bi bi-box-arrow-in-right ms-auto"> Войти</a>
                 <a href="/items" class="btn btn-secondary bi bi-arrow-left-square ms-auto"> Главная</a>
             </div>
         </div>
