--- a/market/src/main/resources/templates/orders.html
+++ b/market/src/main/resources/templates/orders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
     <meta charset="utf-8">
@@ -16,8 +16,18 @@
                     <h2>
                         <span class="badge text-bg-success">Витрина магазина</span>
                     </h2>
-                    <a href="/cart/items" class="btn btn-secondary bi bi-cart4 ms-auto"> Корзина</a>
+                    <a sec:authorize="isAuthenticated()" href="/cart/items" class="btn btn-secondary bi bi-cart4 ms-auto"> Корзина</a>
                     <a href="/items" class="btn btn-secondary bi bi-arrow-left-square"> Главная</a>
+                    <a sec:authorize="isAuthenticated()"
+                       href="/logout"
+                       class="btn btn btn-outline-danger bi bi-box-arrow-left"
+                       data-bs-toggle="tooltip"
+                       data-bs-placement="top"
+                       title="Выход из системы"
+                       th:text="' ' + ${#authentication.name}">
+                        Имя пользователя
+                    </a>
+                    <a th:if="${#authentication == null || !#authentication.isAuthenticated()}" href="/login" class="btn btn-outline-success bi bi-box-arrow-in-right ms-auto"> Войти</a>
                 </div>
             </div>
         </div>
